--- a/src/home/css/Intro.css
+++ b/src/home/css/Intro.css
@@ -49,7 +49,7 @@
     padding-top: 12.8px;
     padding-bottom: 12.8px;
     border-radius: 19px;
-    width: 45%;
+    width: fit-content;
     cursor: pointer;
     font-family: 'Cabin', sans-serif;
     font-style: normal;
@@ -98,7 +98,7 @@
     padding-top: 12.8px;
     padding-bottom: 12.8px;
     border-radius: 19px;
-    width: 55%;
+    width: fit-content;
     cursor: pointer;
     font-family: 'Work Sans', sans-serif;
     color: rgb(135, 135, 135);
