--- a/src/home/css/about.css
+++ b/src/home/css/about.css
@@ -1,13 +1,13 @@
 .about{
     background-color: black;
     width: 100%;
-    height: 600px;
-    display: flex;
+    padding-bottom: 30px;
 }
 
 .aboutfirst{
     width: 100%;
     display: flex;
+    padding-top: 30px;
 }
 
 .yellowtab{
@@ -15,6 +15,7 @@
     height: fit-content !important;
     margin-right: -18%;
     margin-bottom: -20px;
+    margin-left: 20px;
 }
 
 .tabcontainer{
@@ -73,7 +74,7 @@ width: 90%;
     padding-top: 12.8px;
     padding-bottom: 12.8px;
     border-radius: 19px;
-    width: 70%;
+    width: fit-content;
     cursor: pointer;
     font-family: 'Cabin', sans-serif;
     font-style: normal;
@@ -88,24 +89,149 @@ width: 90%;
 .aboutvideo{
     width: 85%;
     display: flex;
-    height: 70%;
+    height: 430px;
     justify-content: center;
     margin-top: 45px;
-    border: 2px solid red;
+    margin-bottom: -40px;
 }
 
+
 .sliderbox{
+    width: 100%;
+    display: flex;
+}
+
+.slider{
+    margin-left: 40px;
+    width: 68%;
+}
+
+.slidercover{
     width: 322px;
     background-color: white;
+    display: flex;
+    flex-flow: column nowrap;
+    padding-bottom: 20px;
+    z-index: 99;
+}
+
+.slidecontainer{
+    width: 95%;
+    display: flex;
+    flex-flow: column;
+    padding-left: 20px;
 }
 
 .sliderheading{
-    font-family: Cabin;
+    font-family: 'Cabin',sans-serif;
 font-style: normal;
 font-weight: bold;
 font-size: 16px;
 line-height: 19px;
 text-transform: uppercase;
 color: #202020;
-margin: 8px 0;
+padding-top: 15px;
 }
+
+.sliderh1{
+    font-family: 'Work Sans', sans-serif;
+font-style: normal;
+font-weight: bold;
+font-size: 28px;
+line-height: 33px;
+color: #202020;
+margin-top: 10px;
+}
+
+.sliderbtn{
+    background-color: black !important;
+    border: 1px solid black !important;
+    padding-left: 25.6px;
+    padding-right: 25.6px;
+    padding-top: 12.8px;
+    padding-bottom: 12.8px;
+    border-radius: 19px;
+    width: fit-content;
+    cursor: pointer;
+    font-family: 'Cabin', sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+    text-transform: uppercase;
+    color: white;
+}
+
+.slide{
+    margin-top: 40px;
+}
+
+.slick-slider{
+    padding-top: 50px;
+    padding-bottom: 20px;
+}
+
+/* .sliderin{
+    width: 120px !important;
+} */
+
+.sliderimg{
+    height: 40px;
+}
+
+/*mobile starts*/
+
+.mobcontainer{
+    width: 100%;
+    display: flex;
+    flex-flow: column;
+    padding-bottom: 30px;
+}
+
+.mobheading{
+    font-family: 'Cabin',sans-serif;
+font-style: normal;
+font-weight: bold;
+font-size: 16px;
+line-height: 19px;
+text-transform: uppercase;
+color: #ffffff;
+padding-top: 55px;
+padding-left: 20px;
+}
+
+.mobh1{
+    font-family: 'Work Sans', sans-serif;
+font-style: normal;
+font-weight: bold;
+font-size: 28px;
+padding-left: 20px;
+padding-bottom: 10px;
+line-height: 33px;
+color: #fff;
+margin-top: 10px;
+}
+
+.mobaboutbtn{
+    background-color: white !important;
+    border: 1px solid white !important;
+    padding-left: 25.6px;
+    padding-right: 25.6px;
+    padding-top: 12.8px;
+    padding-bottom: 12.8px;
+    border-radius: 19px;
+    width: fit-content;
+    cursor: pointer;
+    font-family: 'Cabin', sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #202020;
+    margin: auto;
+}
+
+/*mobile ends*/
