--- a/src/home/css/Intro.css
+++ b/src/home/css/Intro.css
@@ -22,6 +22,7 @@
     height: 350px !important;
 }
 
+
 .content{
     width: 50%;
     display: flex;
@@ -79,7 +80,8 @@
     justify-content: center;
     align-items: center;
     margin-bottom: 20px;
-}                                   
+}
+
 
 .mobpara{
     font-size: 30px;
@@ -109,3 +111,97 @@
 }
 
 /*Mobile ends*/
+
+/*first-about page starts*/
+
+.facontent{
+    display: flex;
+    width: 50%;
+    justify-content: center;
+    align-items: flex-start;
+    padding-bottom: 20px;
+    flex-flow: column nowrap;
+    padding-top: 15px;
+}
+
+.fafirst-title{
+    text-align: start;
+    font-family: 'Cabin', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 19px;
+    text-transform: uppercase;
+    color: #4D6CFA;
+    padding-top: 20px;
+}
+
+.faquote{
+    font-family: 'Work Sans', sans-serif;
+font-style: normal;
+font-weight: bold;
+font-size: 28px;
+line-height: 33px;
+color: #4D6CFA;
+text-align: start;
+text-transform: uppercase;
+width: 62%;
+}
+
+.fapara{
+    font-family: 'Work Sans', sans-serif;
+font-style: normal;
+font-weight: normal;
+font-size: 16px;
+line-height: 22px;
+color: #202020;
+width: 82%;
+}
+
+
+/*Mobile */
+.famobcontent{
+    width: 100%;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.fafirst-mobtitle{
+    width: 95%;
+    text-align: start;
+    font-family: 'Cabin', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 19px;
+    text-transform: uppercase;
+    color: #4D6CFA;
+    padding-top: 20px;
+}
+
+.famobquote{
+    width: 95%;
+    font-family: 'Work Sans', sans-serif;
+font-style: normal;
+font-weight: bold;
+font-size: 28px;
+line-height: 33px;
+color: #4D6CFA;
+text-align: start;
+text-transform: uppercase;
+}
+
+.famobpara{
+    width: 95%;
+    font-family: 'Work Sans', sans-serif;
+font-style: normal;
+font-weight: normal;
+font-size: 16px;
+line-height: 22px;
+color: #202020;
+}
+
+/*first-about page ends*/
