--- a/src/components/css/Nav.css
+++ b/src/components/css/Nav.css
@@ -5,11 +5,26 @@
     z-index: 999;
 }
 
+.navbar{
+    width: 100%;
+    position: fixed;
+    background-color: #EEEA64;
+    z-index: 999;
+}
+
 .collapse-nav{
     width: 100%;
     height: 100%;
     position: fixed;
     background-color: #F7008C;
+    z-index: 999;
+}
+
+.collapse-navbar{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    background-color: #EEEA64;
     z-index: 999;
 }
 
