--- a/src/about/Middle.css
+++ b/src/about/Middle.css
@@ -109,7 +109,7 @@
     font-weight: bold;
     font-size: 16px;
     line-height: 18px;
-    color: #202020;
+    color: #fff;
     text-transform: capitalize;
     text-align: start;
     margin-bottom: 0 !important;
@@ -154,7 +154,23 @@ font-weight: normal;
 font-size: 16px;
 line-height: 22px;
 color: #202020;
+}
 
+.flexinbox-title{
+    font-family: 'Work Sans',sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 28px;
+    line-height: 33px;
+    color: #fff;
+    text-transform: capitalize;
+    text-align: end;
+}
+
+.flexinbox-title img{
+    width: 30px;
+    cursor: pointer;
+    height: 20px;
 }
 
 /*Mobile starts*/
