--- a/src/about/Middle.css
+++ b/src/about/Middle.css
@@ -106,7 +106,7 @@
     width: 300px;
     font-family: 'Work Sans',sans-serif;
     font-style: normal;
-    font-weight: bold;
+    font-weight: 400;
     font-size: 16px;
     line-height: 18px;
     color: #fff;
