--- a/src/home/css/Hire.css
+++ b/src/home/css/Hire.css
@@ -182,8 +182,8 @@
     background-color: transparent !important;
     padding-left: 20.6px;
     padding-right: 20.6px;
-    padding-top: 11.8px;
-    padding-bottom: 11.8px;
+    padding-top: 1.8px;
+    padding-bottom: 1.8px;
     border-radius: 50px;
     width: fit-content;
     cursor: pointer;
@@ -200,11 +200,11 @@
     border: 1px solid #202020 !important;
 }
 
-.slick-track{
-    display: inline-flex;
-    width: 100%;
+/* .slick-track{
+    display: block;
+    width: 100% !important;
     align-items: center;
-}
+} */
 
 .slick-list{
     width: 100%;
@@ -225,6 +225,10 @@ button.slick-prev:before{
     display: flex;
     margin: auto;
 }
+
+/* .slick-slide{
+    padding-top: 15px;
+} */
 
 .serviceslide{
     display: inline-flex !important;
