--- a/src/components/css/Nav.css
+++ b/src/components/css/Nav.css
@@ -18,6 +18,7 @@
     position: fixed;
     background-color: #F7008C;
     z-index: 999;
+    padding-bottom: 40px;
 }
 
 .collapse-navbar{
@@ -46,7 +47,7 @@
     display: flex;
     flex-flow: column;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     margin: auto;
 }
 
@@ -60,6 +61,10 @@ color: #202020;
 padding-top: 0;
 padding-bottom: 0;
 text-transform: capitalize;
+}
+
+.fadein{
+    padding-top: 30px;
 }
 
 .MuiCollapse-container.MuiCollapse-entered{
