--- a/src/components/css/Nav.css
+++ b/src/components/css/Nav.css
@@ -25,7 +25,7 @@
     width: 100%;
     height: 100%;
     position: fixed;
-    background-color: #EEEA64;
+    background-color: #F7008C;
     z-index: 999;
 }
 
@@ -43,11 +43,11 @@
 
 .fade{
     width: 90%;
-    height: 100%;
+    height: 90%;
     display: flex;
     flex-flow: column;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     margin: auto;
 }
 
