--- a/src/home/css/Intro.css
+++ b/src/home/css/Intro.css
@@ -50,10 +50,11 @@
     padding-right: 25.6px;
     padding-top: 12.8px;
     padding-bottom: 12.8px;
-    border-radius: 19px;
+    border-radius: 50px;
     width: fit-content;
     cursor: pointer;
     font-family: 'Cabin', sans-serif;
+    text-transform: uppercase;
     font-style: normal;
     font-weight: bold;
     font-size: 16px;
@@ -100,10 +101,11 @@
     padding-right: 25.6px;
     padding-top: 12.8px;
     padding-bottom: 12.8px;
-    border-radius: 19px;
+    border-radius: 50px;
     width: fit-content;
     cursor: pointer;
     font-family: 'Work Sans', sans-serif;
+    text-transform: uppercase;
     color: rgb(135, 135, 135);
 }
 
