--- a/src/components/css/Nav.css
+++ b/src/components/css/Nav.css
@@ -53,15 +53,15 @@
 
 .navfade{
     font-family: 'Work Sans',sans-serif;
-font-style: normal;
-font-weight: bold;
-font-size: 51px;
-line-height: 60px;
-color: #202020;
-padding-top: 0;
-padding-bottom: 0;
-padding-left: 10px;
-text-transform: capitalize;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 51px;
+    line-height: 60px;
+    color: #202020;
+    padding-top: 0;
+    padding-bottom: 0;
+    padding-left: 10px;
+    text-transform: capitalize;
 }
 
 .fadein{
@@ -81,6 +81,35 @@ text-transform: capitalize;
 }
 
 
+/**/
 
+  .pink {
+   fill: #EC008C
+  }
 
-  
+  .black {
+   fill: #202020
+  }
+
+  .yellow {
+   fill: #EEEA64
+  }
+
+  .yellow-gradient-0 {
+   fill: url(#paint0_linear)
+  }
+
+  .yellow-gradient-1 {
+   fill: url(#paint1_linear)
+  }
+
+  .black-gradient-0 {
+   fill: url(#paint2_linear)
+  }
+
+  .black-gradient-1 {
+   fill: url(#paint3_linear)
+  }
+
+/**/
+
