--- a/src/components/css/Nav.css
+++ b/src/components/css/Nav.css
@@ -5,6 +5,10 @@
     z-index: 999;
 }
 
+header{
+    width: 100%;
+}
+
 .navbar{
     width: 100%;
     position: fixed;
@@ -51,7 +55,24 @@
     margin: auto;
 }
 
+.fade:not(.show){
+    opacity: 1 !important;
+}
+
 .navfade{
+    font-family: 'Work Sans',sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 51px;
+    line-height: 60px;
+    color: #202020 !important;
+    padding-top: 0;
+    padding-bottom: 0;
+    padding-left: 10px;
+    text-transform: capitalize;
+}
+
+.navdeskfade{
     font-family: 'Work Sans',sans-serif;
     font-style: normal;
     font-weight: bold;
@@ -60,12 +81,13 @@
     color: #202020;
     padding-top: 0;
     padding-bottom: 0;
-    padding-left: 10px;
+    padding-left: 12.5%;
     text-transform: capitalize;
 }
 
 .fadein{
     padding-top: 30px;
+    width: 100%;
 }
 
 .MuiCollapse-container.MuiCollapse-entered{
