--- a/src/home/css/Intro.css
+++ b/src/home/css/Intro.css
@@ -4,7 +4,6 @@
   padding-top: 56px !important;
 }
 
-
 .largeIntro{
     width: 1400px;
     height: fit-content !important;
@@ -23,14 +22,23 @@
 .image{
     width: 50%;
     display: flex;
+    justify-content: center; 
+}
+
+/* .image img{
+    width: 100%;
+} */
+
+.firstimage{
+    width: 50%;
+    display: flex;
     justify-content: center;
 }
 
-.image img{
+.firstimage img{
     height: auto !important;
-    width: 100%;
+    width: auto;
 }
-
 
 .content{
     width: 50%;
