--- a/src/home/css/Hire.css
+++ b/src/home/css/Hire.css
@@ -238,7 +238,7 @@
     text-align: center;
     text-transform: uppercase;
     color: #202020;
-    margin-bottom: 0;
+    margin-bottom: 5px !important;
     margin-top: 0;
     border: 1px solid #202020 !important;
 }
@@ -314,6 +314,12 @@ form{
     padding-bottom: 15px !important;
 }
 
+.textfieldmob{
+    width: 100% !important;
+    margin-top: 15px !important;
+    padding-bottom: 15px !important;
+}
+
 .formbtn{
     background-color: black !important;
     border: 1px solid black !important;
@@ -355,6 +361,7 @@ line-height: 19px;
 text-transform: none !important;
 color: red;
 margin-top: 0 !important;
+margin-bottom: 0 !important;
 }
 
 label + .MuiInput-formControl{
@@ -385,10 +392,11 @@ color: black;
 }
 
 .first-box-mobcontainer{
-    width: 95%;
+    width: 100%;
     display: flex;
     flex-flow: column;
     margin: auto;
+    margin-right: 0 !important;
     margin-left: 0 !important;
 }
 
