--- a/src/home/css/Hire.css
+++ b/src/home/css/Hire.css
@@ -243,6 +243,29 @@
     border: 1px solid #202020 !important;
 }
 
+.serviceslider-afterbtn{
+    background-color: transparent !important;
+    padding-left: 20.6px;
+    padding-right: 20.6px;
+    padding-top: 1.8px;
+    padding-bottom: 1.8px;
+    border-radius: 50px;
+    margin-left: 10px;
+    width: 300px;
+    cursor: pointer;
+    font-family: 'Cabin', sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #fff;
+    margin-bottom: 5px !important;
+    margin-top: 0;
+    border: 1px solid #fff !important;
+}
+
 /* .slick-track{
     display: block;
     width: 100% !important;
