--- a/src/home/css/about.css
+++ b/src/home/css/about.css
@@ -308,9 +308,20 @@ margin-top: 10px;
 }
 
 .mob-container{
+    width: 100%;
+    margin: auto;
+    margin-top: 33%;
+}
+
+.tab-container{
     width: 95%;
     margin: auto;
-    margin-top: 35%;
+    margin-top: 350px;
+}
+
+.btncenter{
+    display: flex;
+    justify-content: center;
 }
 
 .mob-frame{
