--- a/src/home/css/Services.css
+++ b/src/home/css/Services.css
@@ -25,7 +25,7 @@
     line-height: 44px;
     text-transform: uppercase;
     color: #202020;
-    padding-top: 30px;
+    padding-top: 70px;
     padding-bottom: 10px;
 }
 
@@ -52,6 +52,7 @@
 
 .picture img{
     height: auto;
+    width: auto;
 }
 
 .title{
