--- a/src/home/css/Services.css
+++ b/src/home/css/Services.css
@@ -115,6 +115,21 @@
 
 /*mobile starts*/
 
+.services-headingmob{
+    width: 100%;
+    text-align: start;
+    font-family: 'Cabin', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 19px;
+    text-transform: uppercase;
+    color: #202020;
+    padding-top: 70px;
+    padding-bottom: 10px;
+    padding-left: 15px;
+}
+
 .mobtabs{
     width: 95%;
     display: flex;
