--- a/src/components/css/Nav.css
+++ b/src/components/css/Nav.css
@@ -3,7 +3,7 @@
     position: fixed;
     background-color: white;
     z-index: 999;
-    box-shadow: 0 0 0.5 0.5 #202020;
+    height: 60px;
 }
 
 header{
@@ -18,6 +18,7 @@ header{
     width: 100%;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .headerfull{
@@ -31,6 +32,7 @@ header{
     position: fixed;
     background-color: #EEEA64;
     z-index: 999;
+    height: 60px;
     padding: 0 0 0 0;
 }
 
@@ -55,7 +57,6 @@ header{
     width: 98%;
     display: flex;
     margin: auto;
-    padding-top: 5px;
     justify-content: space-between;
 }
 
@@ -159,6 +160,10 @@ header{
 
   .black-gradient-1 {
    fill: url(#paint3_linear)
+  }
+
+  .white{
+      fill: white;
   }
 
 /**/
